# TestWeb

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  build.sh  web_build.bat
.github/workflows/: EmscriptenBuildDeploy.yml
CMake-HelloWorld/: CMake-HelloWorld.html  CMake-HelloWorld.js  CMake-HelloWorld.wasm
projects/.github/workflows/: EmscriptenBuildDeploy.yml
projects/CMake-HelloWorld/: CMakeLists.txt
projects/CMake-HelloWorld/inc/: CMake-HelloWorld.h
projects/CMake-HelloWorld/src/: CMake-HelloWorld.cpp
